Update contact form -contact section bg width and height fix -Address alignment fix

--- a/about.css
+++ b/about.css
@@ -67,10 +67,15 @@ button {
 
 .header-about .container .title {
   text-align: center;
-  font-size: 3rem;
+  /* font-size: 3rem; */
   margin-bottom: 35px;
-  /* margin-bottom: 70px; */
   font-family: 'Montserrat', sans-serif;
+  color: #242424;
+  font-size: 36px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.22;
 }
 
 .header-about .container .res-detail {
@@ -90,16 +95,26 @@ button {
 
 .header-about .container .res-img-cont {
   margin-bottom: 0px;
+  margin-left: 20%;
+  margin-right:  20%;
+
 }
+.margin-left {
+  margin-left: 20% !important;
+}
+.margin-right {
+  margin-right: 20% !important;
+}
+
 
 .header-about .container .sec-img {
   text-align: right;
 }
 
 .header-about .container .res-img-cont .img {
-  width: 56.2%;
+  width: 56.7%;
   /* box-shadow: 10px 21px 46px -20px #111; */
-  box-shadow: 0 11px 12px -6px #111;
+  box-shadow: 0 8px 5px -6px #111;
 }
 
 .header-about .container .header-img-container .header-img {
@@ -131,6 +146,7 @@ button {
   .header-about .container .res-img-cont .img {
     width: 100%;
     text-align: center;
+    margin: 0 !important;
   }
 
   .header-about .container .res-detail {
@@ -138,6 +154,7 @@ button {
     line-height: 25px;
     margin-bottom: 50px;
     display: block;
+    text-align: justify;
   }
   .header-about .container .res-img-cont {
     margin-bottom: 30px;
@@ -209,6 +226,7 @@ button {
   font-weight: lighter;
 }
 
+
 .team .container .main .member .role {
   font-size: 1.4rem;
   font-weight: bolder !important;
@@ -216,6 +234,24 @@ button {
 
 .team .container .main .member .pic-cont .pic {
   width: 100%;
+}
+.social-icon{
+  font-size: 24px;
+}
+
+.social-icon a i {
+  font-size: 20px;
+    line-height: 50px;
+    display: block;
+    width: 50px;
+    height: 50px;
+    transition: all .3s;
+    color: #fff;
+    border-radius: 100%;
+    outline: 0;
+    background-color: #212529;
+    margin: 0 auto;
+  
 }
 
 .team .container .res-img-cont {
