--- a/applications.css
+++ b/applications.css
@@ -90,6 +90,9 @@ button {
   html {
     font-size: 12px;
   }
+  .applications-header .container .header-content .indi-application .img-container img{
+    width: auto;
+  }
 }
 
 @media (max-width: 900px) {
@@ -390,6 +393,9 @@ button {
     padding: 5px;
     font-size: 0.5rem;
     letter-spacing: 1px;
+  }
+  .applications-header .container .header-content .indi-application .click {
+    font-size: 5px;
   }
 }
 
