--- a/contact.css
+++ b/contact.css
@@ -23,18 +23,27 @@ button {
   border: none;
   cursor: pointer;
 }
+.input-div{
+  display: inline-block;
+  width: 48%;
+}
 
 
 @media (max-width: 1500px) {
   html {
     font-size: 13px;
   }
+  /* .contact-header .container .form .submit{
+    width: 101% !important;
+  } */
+
 }
 
 @media (max-width: 1350px) {
   html {
     font-size: 12px;
   }
+
 }
 
 @media (max-width: 900px) {
@@ -57,8 +66,15 @@ button {
   padding-top: 140px;
   text-align: center;
   margin-bottom: 50px;
+  /* font-family: 'Montserrat', sans-serif;
+  font-size: 3rem; */
   font-family: 'Montserrat', sans-serif;
-  font-size: 3rem;
+  color: #242424;
+  font-size: 36px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.22;
 }
 
 .contact-header .container {
@@ -70,14 +86,15 @@ button {
 
 .contact-header .container .form,
 .contact-header .container .address {
-  width: 40%;
+  width: 60%;
   padding: 20 30px 0 0;
   
 }
 .contact-header .container .form{
-  width: 60%;
+  width: 40%;
   background: #f3f8ff;
-  padding: 40px  50px 20px 50px;
+  /* padding: 40px  50px 20px 50px; */
+  padding: 70px 50px 40px 50px;
   border-radius: 20px;
 
 }
@@ -86,19 +103,24 @@ button {
 .contact-header .container .form .message-field,
 .contact-header .container .form .submit {
   display: inline-flex;
-  width: 48%;
-  padding: 20px 30px;
+  /* width: 45%; */
+  width: 95%;
+  padding: 20px;
+  /* padding: 20px 30px; */
   margin-bottom: 30px;
   font-size: 1.1rem;
   font-weight: bold;
-  border: 1px solid rgb(195, 230, 255);
+  /* border: 1px solid rgb(195, 230, 255); */
+  border: none;
   font-family: 'Nunito', sans-serif;
   /* background-color: #f6fbff; */
   border-radius: 10px;
 }
 
 .contact-header .container .form .submit {
-  padding: 15px 30px;
+  width: auto;
+  padding: 15px 66px;
+  /* text-align: center !important; */
   font-family: 'Nunito', sans-serif;
   font-size: 25px;
   color: #fff;
@@ -170,6 +192,9 @@ border: solid 1px #0FAFB4;
 .contact-header .container .address {
   padding-left: 40px;
   padding-top: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 /* .contact-header .container .address .map-cont {
@@ -179,9 +204,16 @@ border: solid 1px #0FAFB4;
 } */
 
 .contact-header .container .address .subtitle {
-  font-size: 2rem;
-  font-weight: lighter;
-  margin-bottom: 30px;
+  /* font-size: 2rem;
+  font-weight: lighter; */
+  margin: 20px 0px;
+  font-family: 'Montserrat', sans-serif;
+  color: #242424;
+  font-size: 24px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.22;
 }
 
 .contact-header .container .address .contact-hint {
@@ -214,6 +246,10 @@ border: solid 1px #0FAFB4;
   width: 40px;
   margin-right: 20px;
 }
+.contact-header .container .address .social .social-cont:last-child {
+  /* width: 40px; */
+  margin-right: 0px;
+}
 
 .contact-header .container .address .social .social-cont .icon {
   width: 100%;
@@ -240,6 +276,9 @@ border: solid 1px #0FAFB4;
   .contact-header .container {
     padding: 0 20px;
   }
+  .contact-header .container .form .submit{
+    width: 101% !important;
+  }
 }
 
 @media (max-width: 950px) {
@@ -264,6 +303,7 @@ border: solid 1px #0FAFB4;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 30px;
   }
 
   .contact-header .container .form .form-input,
@@ -271,9 +311,22 @@ border: solid 1px #0FAFB4;
   .contact-header .container .form .submit {
     padding: 10px 20px;
     margin-bottom: 30px;
-    width: 100%;
+    width: 100% !important;
+    /* width: 84% !important; */
+
     margin-left: 0px !important;
   }
+  .input-div{
+    /* display: flex;
+    width: 100%;
+    justify-content: center; */
+    /* padding: 10px 20px;
+    margin-bottom: 30px; */
+    /* width: 100% !important; */
+    width: 96% !important;
+    /* padding-left: 10px; */
+  }
+
 
   .contact-header .container .address .social {
     margin-top: 30px;
