--- a/mads.css
+++ b/mads.css
@@ -503,11 +503,11 @@ button {
 }
 
 .apps .container .apps-details .categories .indi-cat .active-cat {
-  border: 5px solid #c56d3a;
+  border: 5px solid rgb(128 0 0);
   border-radius: 5px;
 }
 .apps .container .apps-details .categories .indi-cat .wrapper:hover {
-  border: 5px solid #c56d3a;
+  border: 5px solid rgb(128 0 0);
   border-radius: 5px;
 }
 
@@ -539,6 +539,7 @@ button {
   color: #fff;
   font-weight: bold;
   margin-bottom: 20px;
+  font-size: 1.5rem;
 }
 
 .apps .container .apps-details .category-apps {
